Add restore code to pix2pix.

--- a/pix2pix.ipynb
+++ b/pix2pix.ipynb
@@ -300,12 +300,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 200\n",
-    "\n",
+    "EPOCHS = 0\n",
+    "RESTORE = 'pix2pix--54'\n",
     "sess = tf.InteractiveSession()\n",
-    "sess.run(tf.global_variables_initializer())\n",
-    "\n",
     "saver = tf.train.Saver()\n",
+    "\n",
+    "if RESTORE is not None:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "else:\n",
+    "    saver.restore(sess, RESTORE)\n",
+    "\n",
     "\n",
     "def moving_average(current, previous=None, alpha=0.01):\n",
     "    try:\n",
