Implement Eigen et al 2014 in the new structure.

--- a/library.bib
+++ b/library.bib
@@ -1,4 +1,4 @@
-@inproceedings{eigen2014depth,
+@inproceedings{Eigen2014,
   title={Depth map prediction from a single image using a multi-scale deep network},
   author={Eigen, David and Puhrsch, Christian and Fergus, Rob},
   booktitle={Advances in neural information processing systems},
@@ -7,7 +7,7 @@
 }
 
 
-@article{liu2016learning,
+@article{Liu2016,
   title={Learning depth from single monocular images using deep convolutional neural fields},
   author={Liu, Fayao and Shen, Chunhua and Lin, Guosheng and Reid, Ian},
   journal={IEEE transactions on pattern analysis and machine intelligence},
