--- a/library.bib
+++ b/library.bib
@@ -1,27 +1,49 @@
+###############
+# Implemented
 @inproceedings{Eigen2014,
-  title={Depth map prediction from a single image using a multi-scale deep network},
-  author={Eigen, David and Puhrsch, Christian and Fergus, Rob},
-  booktitle={Advances in neural information processing systems},
-  pages={2366--2374},
-  year={2014}
+  title = {Depth map prediction from a single image using a multi-scale deep network},
+  author = {Eigen, David and Puhrsch, Christian and Fergus, Rob},
+  booktitle = {Advances in neural information processing systems},
+  pages = {2366--2374},
+  year = {2014}
 }
 
+
+###############
+# Not implemented
+@article{Pan2017,
+  title = {Supervised Adversarial Networks for Image Saliency Detection},
+  author = {Pan, Hengyue and Jiang, Hui},
+  journal = {arXiv preprint arXiv:1704.07242},
+  year = {2017}
+}
 
 @article{Liu2016,
-  title={Learning depth from single monocular images using deep convolutional neural fields},
-  author={Liu, Fayao and Shen, Chunhua and Lin, Guosheng and Reid, Ian},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
-  volume={38},
-  number={10},
-  pages={2024--2039},
-  year={2016},
-  publisher={IEEE}
+  title = {Learning depth from single monocular images using deep convolutional neural fields},
+  author = {Liu, Fayao and Shen, Chunhua and Lin, Guosheng and Reid, Ian},
+  journal = {IEEE transactions on pattern analysis and machine intelligence},
+  volume = {38},
+  number = {10},
+  pages = {2024--2039},
+  year = {2016},
+  publisher = {IEEE}
 }
 
+###############
+# Datasets
+@inproceedings{Saxena2009,
+    author = "Ashutosh Saxena and Min Sun and Andrew Y. Ng",
+    title = {Make3D: Learning 3D Scene Structure from a Single Still Image},
+    journal = {IEEE PAMI},
+    volume = {30},
+    number = {5},
+    pages = {824--840},
+    year = {2009}
+}
 
-@article{Pan2017,
-  title={Supervised Adversarial Networks for Image Saliency Detection},
-  author={Pan, Hengyue and Jiang, Hui},
-  journal={arXiv preprint arXiv:1704.07242},
-  year={2017}
+@inproceedings{Silberman2012,
+    author = "Nathan Silberman and Derek Hoiem and Pushmeet Kohli and Rob Fergus",
+    title = {Indoor Segmentation and Support Inference from RGBD Images},
+    booktitle = {ECCV},
+    year = {2012}
 }
