--- a/library.bib
+++ b/library.bib
@@ -8,6 +8,12 @@
   year = {2014}
 }
 
+@article{Isola2016,
+  title = {Image-to-image translation with conditional adversarial networks},
+  author = {Isola, Phillip and Zhu, Jun-Yan and Zhou, Tinghui and Efros, Alexei A},
+  journal = {arXiv preprint arXiv:1611.07004},
+  year = {2016}
+}
 
 ###############
 # Not implemented
