Start writing the codebase documentation.

--- a/docs/library.bib
+++ b/docs/library.bib
@@ -37,14 +37,38 @@
 
 ###############
 # Datasets
-@inproceedings{Saxena2009,
-    author = "Ashutosh Saxena and Min Sun and Andrew Y. Ng",
-    title = {Make3D: Learning 3D Scene Structure from a Single Still Image},
-    journal = {IEEE PAMI},
-    volume = {30},
-    number = {5},
-    pages = {824--840},
-    year = {2009}
+@article{Saxena2009,
+  title = {Make3d: Learning 3d scene structure from a single still image},
+  author = {Saxena, Ashutosh and Sun, Min and Ng, Andrew Y},
+  journal = {IEEE transactions on pattern analysis and machine intelligence},
+  volume = {31},
+  number = {5},
+  pages = {824--840},
+  year = {2009},
+  publisher = {IEEE}
+}
+
+@article{Saxena2008,
+  title = {3-d depth reconstruction from a single still image},
+  author = {Saxena, Ashutosh and Chung, Sung H and Ng, Andrew Y},
+  journal = {International journal of computer vision},
+  volume = {76},
+  number = {1},
+  pages = {53--69},
+  year = {2008},
+  publisher = {Springer}
+}
+
+@article{Liu2016,
+  title = {Learning depth from single monocular images using deep convolutional
+           neural fields},
+  author = {Liu, Fayao and Shen, Chunhua and Lin, Guosheng and Reid, Ian},
+  journal = {IEEE transactions on pattern analysis and machine intelligence},
+  volume = {38},
+  number = {10},
+  pages = {2024--2039},
+  year = {2016},
+  publisher = {IEEE}
 }
 
 @inproceedings{Silberman2012,
