Update some references and fix some small things.

--- a/docs/library.bib
+++ b/docs/library.bib
@@ -35,6 +35,22 @@
   publisher = {IEEE}
 }
 
+@inproceedings{Saxena2006,
+  title={Learning depth from single monocular images},
+  author={Saxena, Ashutosh and Chung, Sung H and Ng, Andrew Y},
+  booktitle={Advances in neural information processing systems},
+  pages={1161--1168},
+  year={2006}
+}
+
+@article{Mirza2014,
+  title={Conditional generative adversarial nets},
+  author={Mirza, Mehdi and Osindero, Simon},
+  journal={arXiv preprint arXiv:1411.1784},
+  year={2014}
+}
+
+
 ###############
 # Datasets
 @article{Saxena2009,
