--- a/exploration/Make3D.ipynb
+++ b/exploration/Make3D.ipynb
@@ -157,12 +157,11 @@
     "\n",
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
-    "for epoch in range(2000 + 1):\n",
+    "for epoch in range(10000 + 1):\n",
     "    for batch_x, batch_t in batches(train_x, train_t, 32):\n",
     "        sess.run(optimizer, {x: batch_x, t: batch_t})\n",
-    "    print(epoch, sess.run(loss, {x: test_x, t: test_t}))\n",
-    "\n",
-    "test_p = sess.run(y, {x: test_x})"
+    "    if not epoch % 100:\n",
+    "        print(epoch, sess.run(loss, {x: test_x, t: test_t}))"
    ]
   },
   {
@@ -175,12 +174,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "test_p = sess.run(y, {x: test_x})\n",
     "triples = zip(test_x[:10], test_t[:10], test_p[:10])\n",
     "_, axis = plt.subplots(5, 3, figsize=(10,20))\n",
     "plt.tight_layout(), plt.gray()\n",
@@ -209,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
