last changes to report

--- a/docs/library.bib
+++ b/docs/library.bib
@@ -20,6 +20,17 @@
   year = {2017}
 }
 
+@article{Levin2004,
+  title = {Colorization using optimization},
+  author = {Anat Levin, Dani Lischinski, Yair Weiss},
+  journal = {ACM Transactions on Graphics (TOG) - Proceedings of ACM SIGGRAPH 2004},
+  volume = {23},
+  number = {3},
+  pages = {689-694},
+  year = {2004},
+  publisher = {ACM}
+}
+
 @article{Liu2016,
   title = {Learning depth from single monocular images using deep convolutional neural fields},
   author = {Liu, Fayao and Shen, Chunhua and Lin, Guosheng and Reid, Ian},
